mockup is called shelby.html now

--- a/shelby.html
+++ b/shelby.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <p>
-        <center><H1>NEW APP</H1></center>
+        <center><H1>New App</H1></center>
         </p>
         <h3>App Title (eg. Photoshop, Emacs)</h3>
         <input type='text' id='input_01'/>
